card align issue

--- a/src/containers/Market/MarketDetails/index.less
+++ b/src/containers/Market/MarketDetails/index.less
@@ -296,7 +296,7 @@
 }
 
 .repay-remain-right{
-    line-height: 1.1;
+    line-height: 1.07;
 }
 
 .health-right-repay{
